--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,7 @@ bibliography: bib/psu-repro.bib
 csl: bib/apa.csl
 date: "`r Sys.time()`"
 css: css/ioslides.css
+logo: img/psichi_emblem2.gif
 output: 
   ioslides_presentation:
     self_contained: false
@@ -217,7 +218,7 @@ knitr::include_graphics("https://www.rd.com/wp-content/uploads/2017/02/01-How-Ba
 
 -- Any number of researchers I've talked with
 
-## To share (data & materials) or not to share... {.smaller}
+## To share or not to share... {.smaller}
 
 ```{r, out.height="500px", fig.cap="[[@wicherts_poor_2006]](http://doi.org/10.1037/0003-066X.61.7.726)"}
 knitr::include_graphics("https://raw.githubusercontent.com/gilmore-lab/psu-data-repro-bootcamp-2017-07-10/master/img/wicherts_2006_amp_61_7_726_fig1a.jpg")
@@ -252,12 +253,14 @@ knitr::include_graphics("https://iiif.elifesciences.org/lax:67995%2Felife-67995-
 ---
 
 > "*While authors were extremely or very helpful for 41% of experiments, they were minimally helpful for 9% of experiments, and not at all helpful (or did not respond to us) for 32% of experiments. Third, once experimental work started, 67% of the peer-reviewed protocols required modifications to complete the research and just 41% of those modifications could be implemented.*"
-> -- [[@Errington2021-dp]](https://doi.org/10.7554/eLife.67995)
+>
+> [[@Errington2021-dp]](https://doi.org/10.7554/eLife.67995)
 
 ---
 
 > "*This experience draws attention to a basic and fundamental concern about replication – it is hard to assess whether reported findings are credible*"
--- [[@Errington2021-dp]](https://doi.org/10.7554/eLife.67995)
+>
+> [[@Errington2021-dp]](https://doi.org/10.7554/eLife.67995)
 
 # How to do better
 
@@ -295,7 +298,7 @@ I urge you to read it.
 
 ---
 
-> "*Ninety-seven percent of original studies had significant results (P < .05). Thirty-six percent of replications had significant results.*"
+> "*Ninety-seven percent of original studies had significant results (p < .05). Thirty-six percent of replications had significant results.*"
 >
 > [[@collaboration_estimating_2015]](http://science.sciencemag.org/content/349/6251/aac4716)
 
@@ -305,7 +308,7 @@ I urge you to read it.
 >
 > [[@collaboration_estimating_2015]](http://science.sciencemag.org/content/349/6251/aac4716)
 
-## [[@Camerer2018-tr]](Camerer2018-tr)
+## [[@Camerer2018-tr]](Camerer2018-tr) {.smaller}
 
 ```{r fig.cap='[[@Camerer2018-tr]](Camerer2018-tr)', out.height="500px"}
 knitr::include_graphics("https://mfr.osf.io/export?url=https://osf.io/fg4d3/?action=download%26mode=render%26direct%26public_file=True&initialWidth=711&childId=mfrIframe&parentTitle=OSF+%7C+F1+-+EffectSizes.png&parentUrl=https://osf.io/fg4d3/&format=2400x2400.jpeg")
@@ -341,6 +344,11 @@ knitr::include_graphics("https://mfr.osf.io/export?url=https://osf.io/cefq7/?act
 - Funder, journal mandates for sharing increasing
 - But no long-term, stable, funding sources for curation, archiving, sharing
 
+## Script analyses, version control
+
+- RMarkdown, Jupyter notebooks
+- GitHub
+
 ## Open from the beginning...
 
 ---
@@ -351,9 +359,10 @@ knitr::include_graphics("http://cdn2.hubspot.net/hub/134568/file-1208368053-jpg/
 
 ## Science as a way of knowing...
 
-- How do we know?
-- Why should we care?
+- What do we know
+- How do we know it?
 - How do we share what we know (and how we know it)?
+- Why should we (or others) care?
 
 ---
 
